Lecture_1/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
21:10:58 **** Incremental Build of configuration Debug for project Led_Toggle ****
make -j20 all 
arm-none-eabi-size   Led_Toggle.elf 
arm-none-eabi-objcopy  -O ihex  Led_Toggle.elf  "Led_Toggle.hex"
   text	   data	    bss	    dec	    hex	filename
    672	      8	   1568	   2248	    8c8	Led_Toggle.elf
Finished building: default.size.stdout
 
Finished building: Led_Toggle.hex
 
21:16:37 **** Incremental Build of configuration Debug for project Led_Toggle ****
make -j20 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
arm-none-eabi-gcc -o "Led_Toggle.elf" @"objects.list"   -mcpu=cortex-m3 -T"D:\learn_in_depth_git\Embedded_C\Lecture_1\lab1\STM32F103C6TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Led_Toggle.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: Led_Toggle.elf
 
arm-none-eabi-objdump -h -S  Led_Toggle.elf  > "Led_Toggle.list"
arm-none-eabi-objcopy  -O ihex  Led_Toggle.elf  "Led_Toggle.hex"
arm-none-eabi-objcopy  -O binary  Led_Toggle.elf  "Led_Toggle.bin"
arm-none-eabi-size   Led_Toggle.elf 
   text	   data	    bss	    dec	    hex	filename
    672	      8	   1568	   2248	    8c8	Led_Toggle.elf
Finished building: default.size.stdout
Finished building: Led_Toggle.hex
Finished building: Led_Toggle.bin
 
Finished building: Led_Toggle.list
 
 
 
21:16:45 **** Incremental Build of configuration Debug for project Led_Toggle ****
make -j20 all 
arm-none-eabi-size   Led_Toggle.elf 
   text	   data	    bss	    dec	    hex	filename
    672	      8	   1568	   2248	    8c8	Led_Toggle.elf
Finished building: default.size.stdout
 
21:26:23 **** Incremental Build of configuration Debug for project Led_Toggle ****
make -j20 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
../Src/main.c: In function 'main':
../Src/main.c:41:2: error: 'GPIO_CRH' undeclared (first use in this function); did you mean 'GPIOA_CRH'?
  GPIO_CRH    &=0xff0fffff;
  ^~~~~~~~
  GPIOA_CRH
../Src/main.c:41:2: note: each undeclared identifier is reported only once for each function it appears in
../Src/main.c:46:3: error: 'GPIO_ODR' undeclared (first use in this function); did you mean 'GPIOA_ODR'?
   GPIO_ODR |=1<<13;
   ^~~~~~~~
   GPIOA_ODR
make: *** [Src/subdir.mk:24: Src/main.o] Error 1
"make -j20 all" terminated with exit code 2. Build might be incomplete.
21:26:31 **** Incremental Build of configuration Debug for project Led_Toggle ****
make -j20 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
../Src/main.c: In function 'main':
../Src/main.c:46:3: error: 'GPIO_ODR' undeclared (first use in this function); did you mean 'GPIOA_ODR'?
   GPIO_ODR |=1<<13;
   ^~~~~~~~
   GPIOA_ODR
../Src/main.c:46:3: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Src/subdir.mk:24: Src/main.o] Error 1
"make -j20 all" terminated with exit code 2. Build might be incomplete.
21:26:44 **** Incremental Build of configuration Debug for project Led_Toggle ****
make -j20 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
arm-none-eabi-gcc -o "Led_Toggle.elf" @"objects.list"   -mcpu=cortex-m3 -T"D:\learn_in_depth_git\Embedded_C\Lecture_1\lab1\STM32F103C6TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Led_Toggle.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: Led_Toggle.elf
 
arm-none-eabi-objdump -h -S  Led_Toggle.elf  > "Led_Toggle.list"
arm-none-eabi-objcopy  -O ihex  Led_Toggle.elf  "Led_Toggle.hex"
arm-none-eabi-objcopy  -O binary  Led_Toggle.elf  "Led_Toggle.bin"
arm-none-eabi-size   Led_Toggle.elf 
   text	   data	    bss	    dec	    hex	filename
    672	      8	   1568	   2248	    8c8	Led_Toggle.elf
Finished building: default.size.stdout
Finished building: Led_Toggle.hex
Finished building: Led_Toggle.bin
Finished building: Led_Toggle.list
 
 
 
 
21:26:51 **** Incremental Build of configuration Debug for project Led_Toggle ****
make -j20 all 
arm-none-eabi-size   Led_Toggle.elf 
   text	   data	    bss	    dec	    hex	filename
    672	      8	   1568	   2248	    8c8	Led_Toggle.elf
Finished building: default.size.stdout
 
21:36:00 **** Incremental Build of configuration Debug for project Led_Toggle ****
make -j20 all 
arm-none-eabi-size   Led_Toggle.elf 
   text	   data	    bss	    dec	    hex	filename
    672	      8	   1568	   2248	    8c8	Led_Toggle.elf
Finished building: default.size.stdout
 
21:47:30 **** Incremental Build of configuration Debug for project Led_Toggle ****
make -j20 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
arm-none-eabi-gcc -o "Led_Toggle.elf" @"objects.list"   -mcpu=cortex-m3 -T"D:\learn_in_depth_git\Embedded_C\Lecture_1\lab1\STM32F103C6TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Led_Toggle.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: Led_Toggle.elf
 
arm-none-eabi-objdump -h -S  Led_Toggle.elf  > "Led_Toggle.list"
arm-none-eabi-objcopy  -O ihex  Led_Toggle.elf  "Led_Toggle.hex"
arm-none-eabi-objcopy  -O binary  Led_Toggle.elf  "Led_Toggle.bin"
arm-none-eabi-size   Led_Toggle.elf 
   text	   data	    bss	    dec	    hex	filename
    672	      8	   1568	   2248	    8c8	Led_Toggle.elf
Finished building: default.size.stdout
Finished building: Led_Toggle.hex
Finished building: Led_Toggle.bin
Finished building: Led_Toggle.list
 
 
 
 
